tests/snapshots/activity_render__activity_basic_snapshot.snap
---
source: tests/activity_render.rs
assertion_line: 25
expression: svg
---
<svg height="490" viewBox="0 0 580 490" width="580" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="act-arrow" markerHeight="8" markerWidth="8" orient="auto" refX="7" refY="4">
<polygon fill="#181818" points="0 0, 8 4, 0 8"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="225" x2="225" y1="58" y2="88"/>
</g>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="225" x2="225" y1="124" y2="154"/>
</g>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="225" x2="120" y1="210" y2="240"/>
</g>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="225" x2="330" y1="210" y2="240"/>
</g>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="120" x2="225" y1="276" y2="306"/>
<text font-size="11" x="178.5" y="291">
yes
</text>
</g>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="330" x2="225" y1="276" y2="306"/>
<text font-size="11" x="283.5" y="291">
no
</text>
</g>
<g>
<line class="arrow" marker-end="url(#act-arrow)" x1="225" x2="225" y1="362" y2="392"/>
</g>
<g>
<circle cx="225" cy="44" fill="#181818" r="14"/>
</g>
<g>
<rect fill="none" height="36" rx="8" ry="8" stroke="#6c8ebf" stroke-width="1.5" width="160" x="145" y="88"/>
<text text-anchor="middle" x="225" y="110.33333333333333">
Read input
</text>
</g>
<g>
<polygon fill="#fff2cc" points="225,154 253,182 225,210 197,182" stroke="#d6b656" stroke-width="1.5"/>
<text font-size="13" text-anchor="middle" x="225" y="186.33333333333334">
valid?
</text>
</g>
<g>
<rect fill="none" height="36" rx="8" ry="8" stroke="#6c8ebf" stroke-width="1.5" width="160" x="40" y="240"/>
<text text-anchor="middle" x="120" y="262.3333333333333">
Process data
</text>
</g>
<g>
<rect fill="none" height="36" rx="8" ry="8" stroke="#6c8ebf" stroke-width="1.5" width="160" x="250" y="240"/>
<text text-anchor="middle" x="330" y="262.3333333333333">
Show error
</text>
</g>
<g>
<polygon fill="#fff2cc" points="225,306 253,334 225,362 197,334" stroke="#d6b656" stroke-width="1.5"/>
</g>
<g>
<circle cx="225" cy="406" fill="none" r="17" stroke="#181818" stroke-width="2"/>
<circle cx="225" cy="406" fill="#181818" r="14"/>
</g>
</svg>
